# master-ia-lidr

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.web  README.md  conftest.py  docker-compose.dev.yml  docker-compose.yml  output_examples.txt  pyproject.toml  query_examples.py  second-brain-master-ia
.cursor/: settings.json
.cursor/agents/: architecture-check-agent.md  design-solution-agent.md  dod-check-agent.md  product-strategy-analyst.md  quality-check-agent.md  requirement-validator-agent.md  requirement-writer-agent.md  task-breakdown-agent.md  testing-agent.md
.cursor/commands/: check-architecture.md  check-dod.md  check-performance.md  check-quality.md  commit-pending.md  continue-task.md  docs.md  finish-task.md  fixbug.md  linter.md  master-tutor.md  requirement-design.md  requirement-tasks.md  requirement-validate.md  requirement-write.md  save-response.md  session-review.md  start-front-task.md  start-task.md  testing.md  update-docs.md  update-feature.md  write-feature.md  write-front-feature.md
.cursor/plans/: master_ia_docker_uv_af3e0796.plan.md
.cursor/rules/: 00-base-standards.mdc  01-python-standards.mdc  02-fastapi-standards.mdc  04-environment-and-secrets.mdc  05-testing-standards.mdc  07-pre-implementation-analysis.mdc  08-refactoring-standards.mdc  09-requirement-validation-workflow.mdc  (+5 more)
alembic/: env.py
app/: __init__.py  config.py  cors.py  database.py  deps.py  llm_demo.py  main.py  schemas_llm.py  streamlit_app.py
dev-tools/: anthropic_api_ping.py  ingest_budget_fixtures.py  openai_api_ping.py  session_api.py  stress_api.py
docker/: entrypoint-dev.sh  entrypoint.sh
docs/: README.md  arquitectura-estimador-cag.html
evals/: __init__.py
learnings/: README.md
notebooks/: plantilla_ejercicios.ipynb
scripts/: dump_v2_estimation_prompt.py  pgvector_observability.sql  sync-estimador-cag-docs.sh  sync-estimation-prompt-v1-from-v2.sh  worktree_tasks.py
tests/: conftest.py  estimation_fixtures.py  test_acb_orchestrator.py  test_acb_policy.py  test_acb_prompt_rendering.py  test_acb_schemas.py  test_agent_estimations_router.py  test_agent_loop.py  test_agent_schemas.py  test_agent_tools.py  test_ai_model_service.py  test_ai_model_service_observability.py  test_alembic_migration.py  test_api.py  test_api_rate_limiting.py  test_api_security.py  test_attachment_bytes.py  test_citation_verification.py  test_config.py  test_conversation_compression_anchors.py  test_conversation_compression_policy.py  test_conversational_estimation_service.py  test_cors.py  test_database_models.py  test_document_extractor.py  test_domain_guardrails.py  test_dump_v2_estimation_prompt.py  test_dynamic_context_manager.py  test_embeddings_compare_endpoint.py  test_estimate_response_builder.py  test_estimation_prompt_rendering.py  test_estimation_request.py  test_estimation_request_render.py  test_estimation_result_schema.py  test_estimation_stats_logger.py  test_estimations_v2_observability.py  test_examples.py  test_guardrails_input_semantic.py  test_guardrails_output_semantic.py  test_guardrails_pii.py  (+65 more)
web/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
(+710 files in other folders)
