[project]
name = "master-ia"
version = "0.1.0"
description = "Proyecto y entorno del Máster en IA"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "anthropic>=0.45.0",
    "fastapi[standard]>=0.115.0",
    "google-genai>=1.0.0",
    "openai>=1.60.0",
    "uvicorn[standard]>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
