[project]
name = "estimador-cag"
version = "0.1.0"
description = "Context-augmented generation API for software meeting estimates."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.0",
    "openai>=1.60.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.97.0",
    "litellm>=1.83.14",
    "logfire>=4.32.1",
    "jinja2>=3.1.6",
    "instructor>=1.15.1",
    "redis>=7.4.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
