[project]
name = "estimador-cag"
version = "0.1.0"
description = "Context-augmented generation API for software meeting estimates."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.0",
    "openai>=1.60.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.97.0",
    "litellm>=1.83.14",
    "logfire>=4.32.1",
    "jinja2>=3.1.6",
    "instructor>=1.15.1",
    "redis>=7.4.0",
    "langfuse>=4.6.1",
    "pypdf>=6.11.0",
    "python-docx>=1.2.0",
    "tiktoken>=0.7.0",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "alembic>=1.13",
    "greenlet>=3.5.1",
    "sentence-transformers>=5.6.0",
    "slowapi>=0.1.10",
    "langgraph>=1.0.1",
    "langgraph-checkpoint-postgres>=3.0.5",
    "psycopg[binary]>=3.3.4",
    "psycopg-pool>=3.3.1",
]

[dependency-groups]
dev = [
    "deepeval>=4.0.5",
    "httpx>=0.27.0",
    "langchain-community==0.3.27",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pyyaml>=6.0.3",
    "ragas==0.4.3",
]
pii = [
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "evals"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--import-mode=importlib"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "evals: session estimation evaluation suite (golden dataset)",
    "judge: LLM-as-judge tests requiring judge model credentials",
    "slow: expensive or multi-run tests (deselected by default; use --run-heavy or -m slow)",
    "soft: soft consistency multi-run tests",
]
